<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edit_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="78dp"
        android:ems="10"
        android:hint="@string/title_hint"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/edit_description"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/description_hint"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_title" />

    <CheckBox
        android:id="@+id/checkBox_important"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/important_checkbox"
        app:layout_constraintBaseline_toBaselineOf="@+id/checkBox_todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/checkBox_todo" />

    <CheckBox
        android:id="@+id/checkBox_idea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/checbox_marginTop"
        android:layout_marginStart="@dimen/checkbox_marginStart"
        android:layout_marginBottom="@dimen/checkbox_marginBottom"
        android:padding="5dp"
        android:text="@string/idea_checkbox"
        app:layout_constraintBottom_toTopOf="@+id/button_ok"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_description" />

    <CheckBox
        android:id="@+id/checkBox_todo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="122dp"
        android:layout_marginTop="@dimen/checbox_marginTop"
        android:layout_marginBottom="@dimen/checkbox_marginBottom"
        android:padding="5dp"
        android:text="@string/todo_checkbox"
        app:layout_constraintBottom_toTopOf="@+id/button_ok"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_description"
        app:layout_constraintVertical_bias="0.581" />

    <Button
        android:id="@+id/button_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="@dimen/button_marginBottom"
        android:backgroundTint="@color/violet"
        android:text="@string/ok_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sixtyeightdp"
        android:layout_marginTop="@dimen/sixtyeightdp"
        android:layout_marginBottom="@dimen/button_marginBottom"
        android:backgroundTint="@color/violet"
        android:text="@string/cancel_button"
        app:layout_constraintBottom_toBottomOf="@+id/button_ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.167"
        app:layout_constraintStart_toEndOf="@+id/button_ok"
        app:layout_constraintTop_toTopOf="@+id/button_ok"
        app:layout_constraintVertical_bias="0.772" />
</androidx.constraintlayout.widget.ConstraintLayout>